--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
 	"version": 2,
 	"alias": ["beta.malven.se"],
-	"regions": ["bru"],
+	"regions": ["bru1"],
 	"name": "beta.malven.se",
 	"builds": [{ "src": "package.json", "use": "@now/static-build" }]
 }
