--- a/now.json
+++ b/now.json
@@ -3,6 +3,5 @@
 	"alias": ["beta.malven.se"],
 	"regions": ["bru1"],
 	"name": "beta.malven.se",
-	"builds": [{ "src": "package.json", "use": "@now/static-build" }],
-	"config": { "distDir": "www" }
+	"builds": [{ "src": "package.json", "use": "@now/static-build" }]
 }
