--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "3.15.1",
+    "jest-dom": "3.1.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-testing-library": "6.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
