--- a/package.json
+++ b/package.json
@@ -1,29 +1,23 @@
 {
-  "name": "malven-se",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@blueprintjs/core": "3.15.1",
-    "jest-dom": "3.1.3",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-scripts": "2.1.8",
-    "react-testing-library": "6.1.2"
-  },
+  "name": "template-vite-react-ts-tailwind-v3",
+  "version": "0.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "now-build": "react-scripts build && mv build dist"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@vitejs/plugin-react": "^1.0.7",
+    "vitawind": "^2.2.4",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.5",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2"
+  }
 }
